--- a/Pug_Dashboard.pug
+++ b/Pug_Dashboard.pug
@@ -5,6 +5,7 @@ html(lang="en")
         //- Bootstrap 5 References
         link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js")
+        script(src="./main.js")
     body
         h1.cool #{pageTitle}
         p This is the #{pageTitle} page.
@@ -28,5 +29,6 @@ html(lang="en")
                 ul
                 each item in items
                     li= item.note
+                    a(class='button delete-todo' data-articleid=val._id href='/api/item'+val._id) delete
                 else
                     li There are no notes.
