--- a/Pug_Dashboard.pug
+++ b/Pug_Dashboard.pug
@@ -4,6 +4,7 @@ html(lang="en")
         title #{pageTitle} | #{appName}
         //- Bootstrap 5 References
         link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css")
+        link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js")
         script(src="./main.js")
     body
@@ -29,6 +30,9 @@ html(lang="en")
                 ul
                 each item in items
                     li= item.note
-                    Button(class='button delete-todo' href='/api/item/' + item.id) Delete
+                        Button(class='btn btn-default' href='/api/item/' + item.id) Edit 
+                            i(class="bi bi-pencil")
+                        Button(class='btn btn-danger' href='/api/item/' + item.id) Delete 
+                            i(class="bi bi-trash3")
                 else
                     li There are no notes.
