--- a/Pug_Dashboard.pug
+++ b/Pug_Dashboard.pug
@@ -30,7 +30,7 @@ html(lang="en")
             ul
             each item in items
                 li= item.note
-                    Button(class='btn btn-secondary' onClick=`sendDelete('item',${item.id})` ) Edit 
+                    Button(class='btn btn-secondary' onClick=`openEditForm()` ) Edit 
                         i(class="bi bi-pencil")
                     Button(class='btn btn-danger' onClick=`sendDelete('item',${item.id})` ) Delete 
                         i(class="bi bi-trash3")
