--- a/Pug_Dashboard.pug
+++ b/Pug_Dashboard.pug
@@ -25,7 +25,7 @@ html(lang="en")
                 br
                 button.btn.btn-primary(type='submit') Add to List
             #item-container.container.mt-3
-            h2 My Items
+            h2 My QR Codes
             //- -var items= items
             ul
             each item in items
@@ -35,4 +35,5 @@ html(lang="en")
                     Button(class='btn btn-danger active' onClick=`sendDelete('item',${item.id})` ) Delete 
                         i(class="bi bi-trash3")
             else
-                li There are no notes.
+                li There are no QR codes. 
+                Button(class='btn btn-primary active' onClick=`` ) Create your first QR code here!
