--- a/Pug_Dashboard.pug
+++ b/Pug_Dashboard.pug
@@ -18,14 +18,18 @@ html(lang="en")
             br
         #item-container.container.mt-3
             h2 My Physical Assets
-            //- -var items= items
+            
+            Button(class='btn btn-primary active' id='gencode' onClick=`buttonclick()` ) Add a new asset & linked QR code
+
             ul
             each item in items
                 li= item.code
+                    a(href=`/code/${item.code}`) Details
                     Button(class='btn btn-secondary' onClick=`openEditForm()` disabled) Edit 
                         i(class="bi bi-pencil")
                     Button(class='btn btn-danger active' onClick=`sendDelete('item',${item.id})` ) Delete 
                         i(class="bi bi-trash3")
+            
             else
                 li You do not have any assets entered. 
                 Button(class='btn btn-primary active' id='gencode' onClick=`buttonclick()` ) Create your first asset & QR code here!
